<resources>
    <string name="app_name">Chat Application</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">ex@ample.com</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="btnLogOut">Log Out</string>
    <string name="accept_notification">Accept Notifications</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="msgText">Message text</string>
    <string name="sendMsg">Send</string>
    <string name="exitMsg">Press back button once again to exit application.</string>
    <string name="emptyMsg">Message is empty.</string>
    <string name="sentMsg">Message sent.</string>
    <string name="ContactsHeader">My chat list</string>

    <string name="errorMsgReg">Please enter valid data.</string>
    <string name="errorMsgLogIn">Invalid username/password combination.</string>

    <string-array name="spinnerItems">
        <item>Male</item>
        <item>Female</item>
        <item>Unspecified</item>
    </string-array>

    <string name="firstContact">First Contact ever!!!</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="ancientMaster">Welcome ancient master!</string>
    <string name="youngMaster">Welcome young master!</string>
    <string name="username_exists">Username already exists.</string>
    <string name="reg_successful">Registration successful.</string>
    <string name="reg_failed">Registration failed.</string>
    <string name="login_successful">Login successful.</string>
    <string name="login_failed">Login failed.</string>
    <string name="username_invalid">Invalid username.</string>
    <string name="logout_successful">Logged out.</string>
    <string name="logout_failed">Logout failed.</string>
    <string name="zero_contacts">No contacts to display</string>
    <string name="message_failed">Message is not sent. Please try again.</string>
    <string name="refresh_messages">Refreshing messages.</string>
    <string name="refresh_contacts">Refreshing contacts list.</string>

    <string name="notification_text">Hey! We miss you and your friends miss you.
                                     You have new message(s)</string>
    <string name="notification_new_message_title">ChatApp New Message(s)</string>

</resources>
