<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="arsic.aleksa.chatapplication.MessageActivity">

    <LinearLayout
        android:id="@+id/LinearMessageHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            >

            <TextView
                android:id="@+id/MessageContactName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:textAlignment="center"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RelativeMessageLogOut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            >

            <Button
                android:id="@+id/MessageLogOutBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnLogOut"
                />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearMessages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/LinearMessageHeader"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.05"
            >

        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:orientation="vertical"
            >

            <ListView
                android:id="@+id/MessageListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ListView>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.05"
            >

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearMessageFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.05"
            >

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/RelativeMessageEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            >

            <EditText
                android:id="@+id/MessageEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/msgText"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.05"
            >

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RelativeMessageSendBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            >

            <Button
                android:id="@+id/MessageSendBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sendMsg"
                />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
